--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ footer {
   width: 10px; /* Set the width of the icon */
   height: 10px; /* Set the height of the icon */
   vertical-align: middle; /* Align the icon with the text */
-  margin-right: 2px; /* Minimal space between icon and text */
+  margin-right: 1px; /* Minimal space between icon and text */
 }
 
 .social-links a {
@@ -241,9 +241,10 @@ footer {
 }
 
 .social-links .social-icon .icon {
-  width: 10px; /* Set the size of social media icons */
-  height: 10px;
+  width: 15px; /* Set the size of social media icons */
+  height: 15px;
   display: inline-block;
+  margin-right: 6px;
 }
 
 
