modified js, css & index files

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,25 +197,6 @@ main {
   font-weight: bold;
 }
 
-.news-list {
-  list-style: none;
-  padding-left: 20px;
-}
-
-.news-list li {
-  list-style-type: disc;
-  margin-bottom: 10px;
-}
-
-.news-date {
-  background-color: #2ec317;
-  border-radius: 8px;
-  padding: 5px;
-  display: inline-block;
-  font-weight: bold;
-  color: white;
-}
-
 /* Footer Styles */
 footer {
   background-color: transparent; 
@@ -272,7 +253,7 @@ footer {
 }
 
 .education-details h2 {
-  font-size: 1em;
+  font-size: 1.2em;
   margin: 0;
   margin-bottom: 5px;
 }
@@ -287,6 +268,62 @@ footer {
 }
 
 
+/* for 'Recent News' to get expanded when clicked & show full news list */
+
+/* Initially hide extra news items */
+.news-item {
+  display: none;
+  margin-bottom: 10px;
+}
+
+/* Show the first five news items */
+.news-item:nth-child(-n+5) {
+  display: list-item;
+}
+
+/* Styles for the toggle link */
+.full-news-toggle {
+  margin-top: 10px;
+  text-align: right;
+}
+
+.full-news-toggle a {
+  text-decoration: none;
+  color: #0066cc;
+  cursor: pointer;
+}
+
+/* Styling for the year headings in the news list */
+.news-year {
+  list-style-type: none; /* Remove list-style marker */
+  font-size: 1.2em; /* Slightly larger font size */
+  font-weight: bold;
+  margin-top: 20px; /* Add some space above the year */
+  margin-bottom: 10px; /* Add some space below the year */
+  color: #333; /* Darker color for emphasis */
+}
+
+/* Styling for the entire news list */
+.news-list {
+  list-style-type: none; /* Remove default list-style */
+  padding-left: 20px; /* Add left padding for the list */
+}
+
+/* Styling for individual news items */
+.news-item {
+  list-style-type: disc; /* Set list-style marker to disc */
+  margin-bottom: 10px; /* Space between news items */
+  margin-left: 20px; /* Offset the marker slightly */
+}
+
+.news-date {
+  background-color: #2ec317;
+  border-radius: 8px;
+  padding: 5px;
+  display: inline-block;
+  font-weight: bold;
+  color: white;
+}
 
 
 
