--- a/css/styles.css
+++ b/css/styles.css
@@ -385,6 +385,98 @@ footer {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Slightly increase the shadow on hover */
 }
 
+/*for /Publications page */
+/* Main Content for Publications */
+.main-content h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.main-content h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.publication-item {
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 12px;
+  margin-bottom: 20px;
+}
+
+.thumbnail img {
+  width: 100px; /* adjust as needed */
+  height: auto;
+  border-radius: 5px;
+  margin-right: 17px;
+}
+
+.publication-details {
+  flex: 1;
+}
+
+.conference-name {
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: inline-block;
+  margin-bottom: 1px;
+}
+
+.paper-title {
+  font-weight: bold;
+  color: #0066cc;
+  text-decoration: none;
+  font-size: 1.2em;
+}
+
+.paper-title:hover {
+  text-decoration: underline;
+}
+
+.authors a {
+  color: #0066cc;
+  text-decoration: none;
+}
+
+.authors a:hover {
+  text-decoration: underline;
+}
+
+.buttons {
+  margin-top: 1px;
+}
+
+.expandable-button {
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-right: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.expandable-button a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.expandable-button:hover {
+  background-color: #e0e0e0;
+}
+
+.expandable-content {
+  display: none;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f9f9f9;
+}
+
+
 
 
 
