--- a/css/blogstyle.css
+++ b/css/blogstyle.css
@@ -2,7 +2,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'PT Serif', serif;
     box-sizing: border-box;
     background-color: #f4f4f4;
   }
@@ -276,7 +276,7 @@ body, html {
   
   .blog-post-link {
     text-decoration: none;
-    color: rgb(62, 79, 233);
+    color: rgb(11, 31, 212);
     display: block;
     margin-bottom: 6px; 
   }
