--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'PT Serif', serif;
   box-sizing: border-box;
   background-color: #f4f4f4;
 }
