--- a/css/pstyle.css
+++ b/css/pstyle.css
@@ -322,6 +322,22 @@ body, html {
     background-color: #f9f9f9;
   }
   
+
+  /*image style for project pages*/
+  .image-container {
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    aspect-ratio: 1200 / 630;
+    overflow: hidden;
+    margin: 0 auto; /* Center the image container */
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the container */
+}
   
   
   
